[project]
name = "interactive-equity-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
      "agno",
      "openai",
      "yfinance",
      "python-dotenv",
      "sqlalchemy",
      "alembic",
      "psycopg2-binary",
      "ddgs>=9.11.2",
]
